Add the generic repository to the project

--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+  "ConnectionStrings": {
+    "BookAndMovieConnectionString": "Data Source=Acer;Initial Catalog=BookAndMovie;Integrated Security=true;"
+  }
 }
