--- a/BooksAndMovies.WebUI/BooksAndMovies.WebUI.csproj
+++ b/BooksAndMovies.WebUI/BooksAndMovies.WebUI.csproj
@@ -7,8 +7,16 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BooksAndMovies.Data\BooksAndMovies.Data.csproj" />
   </ItemGroup>
 
 </Project>
