--- a/.gitignore
+++ b/.gitignore
@@ -268,6 +268,9 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# Static files
+**/wwwroot/lib
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
