--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bld/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+wwwroot/lib
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -268,8 +268,7 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
-# Static files
-**/wwwroot/lib/
+
 
 # Business Intelligence projects
 *.rdl.data
