--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bld/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-BooksAndMovies.WebUI/wwwroot/lib
+wwwroot/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -267,8 +267,6 @@ ServiceFabricBackup/
 *.mdf
 *.ldf
 *.ndf
-
-
 
 # Business Intelligence projects
 *.rdl.data
