Add fluentvalidation to the project

--- a/BooksAndMovies.Business/BooksAndMovies.Business.csproj
+++ b/BooksAndMovies.Business/BooksAndMovies.Business.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\BooksAndMovies.Entity\BooksAndMovies.Entity.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
+  </ItemGroup>
+
 </Project>
