--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -10,6 +10,6 @@
 
 
   "ConnectionStrings": {
-    "BookAndMovieConnectionString": "Data Source=Acer;Initial Catalog=BookAndMovie;Integrated Security=true;"
+    "BookAndMovieConnectionString": "Data Source={Your server name};Initial Catalog={Your table name};Integrated Security=true;"
   }
 }
