Move api key to the appsettings.json page

--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -8,8 +8,13 @@
   },
   "AllowedHosts": "*",
 
-
   "ConnectionStrings": {
-    "BookAndMovieConnectionString": "Data Source={Your server name};Initial Catalog={Your table name};Integrated Security=true;"
+    "BookAndMovieConnectionString": "{Your database connectionstring}"
+  },
+
+  "ApiKeys": {
+    "TMDBApiKey": "{Your key}",
+    "GoogleBookApi": "{Your key}"
   }
+
 }
