--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 **/wwwroot/lib
 **/wwwroot/css/*bootstrap*
+*appsettings.Development.json*
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
