--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -8,13 +8,21 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
+  "ConnectionString": {
     "BookAndMovieConnectionString": "{Your database connectionstring}"
+  },
+  "ConnectionStrings": {
+    "BookAndMovieConnectionString": "Data Source=Acer;Initial Catalog=BookAndMovie;Integrated Security=true;"
+  },
+
+  "ApiKey": {
+    "TMDBApiKey": "{Your key}",
+    "GoogleBookApi": "{Your key}"
   },
 
   "ApiKeys": {
-    "TMDBApiKey": "{Your key}",
-    "GoogleBookApi": "{Your key}"
+    "TMDBApiKey": "ebd943da4f3d062ae4451758267b1ca9",
+    "GoogleBookApi": "AIzaSyAWeKsrZKQlLMC2AaDxM1zRbLoBHoEMj8w"
   }
 
 }
