--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -8,12 +8,12 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionString": {
+  "ConnectionStrings": {
     "BookAndMovieConnectionString": "{Your database connectionstring}"
   },
   
 
-  "ApiKey": {
+  "ApiKeys": {
     "TMDBApiKey": "{Your key}",
     "GoogleBookApi": "{Your key}"
   },
