Add non-async method to the TMDBModel

--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -8,16 +8,23 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
+  "ConnectionString": {
     "BookAndMovieConnectionString": "{Your database connectionstring}"
   },
 
-  "ApiKeys": {
+  "ConnectionStrings": {
+    "BookAndMovieConnectionString": "Data Source=Acer;Initial Catalog=BookAndMovie;Integrated Security=true;"
+  },
+
+  "ApiKey": {
     "TMDBApiKey": "{Your key}",
     "GoogleBookApi": "{Your key}"
   },
 
-  
+  "ApiKeys": {
+    "TMDBApiKey": "ebd943da4f3d062ae4451758267b1ca9",
+    "GoogleBookApi": "AIzaSyAWeKsrZKQlLMC2AaDxM1zRbLoBHoEMj8w"
+  },
 
   "DemoUser": {
     "Firstname": "Demo",
