--- a/BooksAndMovies.WebUI/appsettings.json
+++ b/BooksAndMovies.WebUI/appsettings.json
@@ -6,30 +6,26 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
 
-  "ConnectionString": {
+  "ConnectionStrings": {
     "BookAndMovieConnectionString": "{Your database connectionstring}"
   },
 
-  "ConnectionStrings": {
-    "BookAndMovieConnectionString": "Data Source=Acer;Initial Catalog=BookAndMovie;Integrated Security=true;"
-  },
 
-  "ApiKey": {
+  "ApiKeys": {
     "TMDBApiKey": "{Your key}",
     "GoogleBookApi": "{Your key}"
   },
 
-  "ApiKeys": {
-    "TMDBApiKey": "ebd943da4f3d062ae4451758267b1ca9",
-    "GoogleBookApi": "AIzaSyAWeKsrZKQlLMC2AaDxM1zRbLoBHoEMj8w"
-  },
 
   "DemoUser": {
     "Firstname": "Demo",
     "Lastname": "User",
     "Email": "demouser@gmail.com",
     "Password": "demouser"
-  }
+  },
+
+  "AllowedHosts": "*"
+
+
 }
